# manual-mmdm

./: .gitignore  README.md  build.py  manual-mmdm.json  pyproject.toml
.github/: README.md
.github/workflows/: release.yml
src/: config.py  database.py  main.py  models.py  translations.py
