[project]
name = "manual-mmdm"
version = "1.1.1"
dependencies = ["PyQt6>=6.6.1", "SQLAlchemy>=2.0.27", "alembic>=1.13.1"]
description = "Manual version of Minecraft Mod Dependency Manager"
authors = [{ name = "pytree", email = "houjunqimail@gmail.com" }]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "jupyterlab",
    "pyinstaller>=6.12.0",
    "pillow>=11.1.0",
]

[tool.pyright]
exclude = [".venv", "venv"]
ignore = [".venv", "venv"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "F841", "I001"] # Jupyter Notebook

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
warn_return_any = true
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
incremental = true
strict_optional = true
show_traceback = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
force_uppercase_builtins = true
force_union_syntax = true
exclude = [".venv", "venv", "dist", "build"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python src/main.py"
lab = "jupyter lab"
build = "python build.py"
